# geniustechspace-api-contracts

./: Cargo.toml
accounts/: Cargo.toml
accounts/protobuf/: auth.proto  user.proto
shared/: Cargo.toml
shared/proto/: auth.proto
shared/protobuf/: audit.proto  auth.proto
storage-adapter/: Cargo.toml
